2008-03-13  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformRendererGL.cc:
	* src/main.cc:
	Add waveform renderer using OpenGL.

2008-03-13  kitone  <kitone@gna.org>

	* acinclude.m4:
	* configure.in:
	* src/Makefile.am:
	Add dependences: OpenGL, gtkglextmm-1.2

2008-03-13  kitone  <kitone@gna.org>

	* share/menubar.xml:
	* src/Makefile.am:
	* src/actions/WaveformEditor.cc:
	* src/actions/WaveformEditor.h:
	* src/actions/WaveformManagement.cc:
	* src/actions/WaveformRenderer.cc:
	* src/actions/WaveformRenderer.h:
	Add the new Waveform Editor.

2008-03-13  kitone  <kitone@gna.org>

	* src/gui/MenuBar.cc:
	Remove Waveform actions.

2008-03-13  kitone  <kitone@gna.org>

	* src/gui/DialogFileChooser.cc:
	* src/gui/DialogFileChooser.h:
	Rename OpenWaveformUI by DialogOpenWaveform
	and move in DialogFileChosser.

	* src/Makefile.am:
	* src/gui/OpenWaveformUI.cc:
	* src/gui/OpenWaveformUI.h:
	Remove files.

2008-03-13  kitone  <kitone@gna.org>

	* src/Waveform.cc:
	* src/Waveform.h:
	Add static function 'create_from_file'.

2008-03-13  kitone  <kitone@gna.org>

	* src/SubtitleEditorWindow.h:
	* src/gui/Application.cc:
	* src/gui/Application.h:
	Preparing the new multimedia system for the 
	futur player and the waveform editor.

2008-03-13  kitone  <kitone@gna.org>

	* share/glade/subtitleeditor.glade:
	* src/Makefile.am:
	* src/gui/Application.cc:
	* src/gui/Application.h:
	* src/gui/WaveformSystem.cc:
	* src/gui/WaveformSystem.h:
	Remove WaveformSystem.

2008-03-01  kitone  <kitone@gna.org>

	* src/Document.cc:
	Small fix (finish_command)

2008-02-13  kitone  <kitone@gna.org>

	* TODO:
	Update.

2008-02-12  kitone  <kitone@gna.org>

	* src/actions/ViewManager.cc:
	Small improvements in View Manager like sensitive.

2008-02-12  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/actions/ViewModes.cc:
	Rename ViewModes.cc by ViewManager.cc

2008-02-12  kitone  <kitone@gna.org>

	* share/glade/Makefile.am: