@@ -1,3 +1,9 @@
+2008-03-15  kitone  <kitone@gna.org>
+
+	* src/actions/WaveformRendererGL.cc:
+	* src/main.cc:
+	Displayed a message when window system doesn't support OpenGL.
+
 2008-03-13  kitone  <kitone@gna.org>
 
 	* src/Makefile.am:
